--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 </h1>
 <input type="text" name="" placeholder="Enter Username" id="username">
 <input type="password" name="" placeholder="Enter Password" id="password">
-<input type="submit" name="" value="GET CODE"  onclick="validate()">
+<button type="submit" name="" value="GET CODE"  onclick="validate()">GET CODE</button>
 
 
 </form>
 
 
 </body>
-
 
 
 </html>
