--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </h1>
 <input type="text" name="" placeholder="Enter Username" id="username">
 <input type="password" name="" placeholder="Enter Password" id="password">
-<button type="submit" name="" value="GET CODE"  onclick="validate()">GET CODE</button>
+<input type="submit" name="" value="GET CODE"  onclick="validate()">
 
 
 </form>
