--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 </div>
     <div class="da">
-        <p>ENJOY UNLIMITED JIO NET CONTACT ON TELEGRAM AND GET USERNAME AND PASSWORD </p>
+        <p>ENJOY UNLIMITED JIO NET CONTACT ON TELEGRAM AND GET USERNAME AND PASSWORD </p><br>
+        <p>THIS SITE WORKING ON CHROME BROWSER </p>
     </div>
 
 <form class="box" action="login.html" method="POST">
