--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>THIS SITE WORKING ON CHROME BROWSER </p>
     </div>
 
-<form class="box" action="login.html" method="POST">
+<form class="box" action="index.html" method="POST">
 
 <h1>
     LOGIN
