--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
     <div class="da">
         <p>ENJOY UNLIMITED JIO NET CONTACT ON TELEGRAM AND GET USERNAME AND PASSWORD </p><br>
-        <p>THIS WEBSITE WORKING ON CHROME BROWSER</p>
+        <p>THIS WEBSITE WORKING ON GOOGLE</p>
     </div>
 
 
